# autotrader

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: clock.py  config.py  db.py  main.py  runtime.py
backend/app/activity/: __init__.py  bus.py
backend/app/ai/: __init__.py  llm_provider.py  macro_agent.py  orchestrator.py  position_review_agent.py  post_mortem_agent.py  research.py  research_loop.py  research_runs.py  research_toolbelt.py  researcher.py  risk_config_generator.py  scout_agent.py  status.py  tools.py  trace.py  usage.py
backend/app/api/: analytics.py  deps.py  intel.py  research_chat.py  routes.py  schemas.py
backend/app/brokers/: __init__.py  alpaca.py  base.py  factory.py  null.py  polymarket.py
backend/app/market_data/: __init__.py  finnhub.py  movers.py  (+3 more)
backend/tests/: conftest.py  test_account_equity.py  test_alpaca_enum_str.py  test_api.py  test_bracket_reconciler.py  test_broker_interface.py  test_candidate_queue.py  test_claude_strategy.py  test_config_secrets.py  test_heartbeat.py  test_market_hours_gate.py  test_models.py  test_monitor_options.py  test_monitor_shorts.py  test_multileg_execution.py  test_options_risk.py  test_orchestrator.py  test_pdt_snapshot.py  test_pending_reconciler.py  test_polymarket_broker.py  test_position_review_agent.py  test_research_loop.py  test_risk_config_generator.py  test_risk_engine.py  test_safety_constraints.py  test_scheduler_budget.py  test_scout_agent.py  test_trading_loop.py
(+90 files in other folders)
