[project]
name = "autotrader"
version = "0.1.0"
description = "AI auto-trader for Alpaca (stocks) + Polymarket, paper-first with hard risk caps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "openai>=1.50",
    "alpaca-py>=0.33",
    "py-clob-client>=0.17",
    "python-dotenv>=1.0",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# B008: FastAPI's Depends()/Query() in defaults is idiomatic, not a bug.
# N806: test-scope PascalCase locals (SessionLocal) are fine.
ignore = ["B008", "N806"]
